--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -104,15 +104,16 @@
                                                     <label for="exampleFormControlSelect1" class="col-xl-3 col-sm-4 mb-0">Origine Produit :</label>
                                                     <select class="form-control digits col-xl-8 col-sm-7" id="exampleFormControlSelect1">
                                                         <option>Argentine</option>
+                                                        <option>Afrique du Sud</option>
                                                         <option>Bresil</option>
                                                         <option>China</option>
                                                         <option>Colombie</option>
                                                         <option>Ethiopie</option>
-                                                        <option>Inde</option>
-                                                        <option>Réunion</option>
+                                                        <option>Inde</option>                                                       
                                                         <option>Indonesie</option>
                                                         <option>Japon</option>
                                                         <option>Kenya</option>
+                                                        <option>Réunion</option>
                                                         <option>Vietnam</option>
                                                         <option>Yemen</option>
                                                     </select>
