--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -500,7 +500,7 @@ button.btn.btn-outline:active {
   text-align: center;
 }
 .title3 h4 {
-  color: #ff8084;
+  color: black;
   padding-bottom: 10px;
   margin-bottom: 5px;
   margin-top: -3px;
