--- a/src/app/add-product/add-product.component.html
+++ b/src/app/add-product/add-product.component.html
@@ -109,7 +109,7 @@
                                                         <option>China</option>
                                                         <option>Colombie</option>
                                                         <option>Ethiopie</option>
-                                                        <option>Inde</option>                                                       
+                                                        <option>Inde</option>
                                                         <option>Indonesie</option>
                                                         <option>Japon</option>
                                                         <option>Kenya</option>
@@ -168,7 +168,7 @@
 
                                             <div class="offset-xl-3 offset-sm-4">
                                                 <button type="submit" class="btn btn-primary" routerLink='/admin-pdt-confirmation' routerLinkActive="active">AJOUTER</button>
-                                                <button type="button" class="btn btn-light">ANNULER</button>
+                                                <button type="button" class="btn btn-light"routerLink='/admin-index' routerLinkActive="active" style="margin-top: 26%";>ANNULER</button>
                                             </div>
                                         </form>
                                     </div>
