--- a/src/app/admin-index/admin-index.component.html
+++ b/src/app/admin-index/admin-index.component.html
@@ -204,11 +204,7 @@
                     <p>
                       0.25% <span><i class="fa fa-angle-up"></i></span>
                     </p>
-                    <h5 class="f-w-600">Ventes brutes d'aujourdh'ui</h5>
-                    <p>
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting
-                    </p>
+                    <h5 class="f-w-600">Ventes brutes d'aujourd'hui</h5>
                   </div>
                   <div class="bg-danger b-r-8">
                     <div class="small-box">
@@ -282,7 +278,7 @@
                     routerLink="/order-list"
                     routerLinkActive="router-link-active"
                     class="btn btn-primary"
-                    >View All Orders</a
+                    >Voir toutes les commandes</a
                   >
                 </div>
               </div>
