--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -115,8 +115,8 @@
             </div>
         </div>
         <div class="row cart-buttons">
-            <div class="col-6"><a href="#" class="btn btn-solid">Continuer les achats</a></div>
-            <div class="col-6"><a href="#" class="btn btn-solid">Valider la commande</a></div>
+            <div class="col-6"><a routerLink="/category-page" routerLinkActive="active" class="btn btn-solid">Continuer les achats</a></div>
+            <div class="col-6"><a routerLink="/checkout" routerLinkActive="active" class="btn btn-solid">Valider la commande</a></div>
         </div>
     </div>
 </section>
