--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,117 +1,117 @@
-
 <!-- header start -->
 <app-navbar></app-navbar>
 
 <!-- section start -->
 <section class="section-b-space">
-    <div class="container">
-        <div class="checkout-page">
-            <div class="checkout-form">
-                <form>
-                    <div class="row">
-                        <div class="col-lg-6 col-sm-12 col-xs-12">
-                            <div class="checkout-title">
-                                <h3>Facturation</h3></div>
-                            <div class="row check-out">
-                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                                    <div class="field-label">Nom</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                                    <div class="field-label">Prénom</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                                    <div class="field-label">Téléphone</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
-                                    <div class="field-label">Adresse email</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-md-12 col-sm-12 col-xs-12">
-                                    <div class="field-label">Adresse</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-md-12 col-sm-12 col-xs-12">
-                                    <div class="field-label">Ville</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-md-12 col-sm-6 col-xs-12">
-                                    <div class="field-label">Code postal</div>
-                                    <input type="text" name="field-name" value="" placeholder="">
-                                </div>
-                                <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                    <input type="checkbox" name="shipping-option" id="account-option"> &ensp;
-                                    <label for="account-option">Créer un compte?</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-6 col-sm-12 col-xs-12">
-                            <div class="checkout-details">
-                                <div class="order-box">
-                                    <div class="title-box">
-                                        <div>Produit <span>Total</span></div>
-                                    </div>
-                                    <ul class="qty">
-                                        <li>Thé blanc × 1 <span>10,20€</span></li>
-                                        <li>Café arabica × 2 <span>36,80€</span></li>
-                                    </ul>
-                                    <ul class="sub-total">
-                                        <li>Sous-total <span class="count">47,00€</span></li>
-                                        <li>Livraison
-                                            <div class="shipping">
-                                                <div class="shopping-option">
-                                                    <input type="checkbox" name="free-shipping" id="free-shipping">
-                                                    <label for="free-shipping">Colissimo</label>
-                                                </div>
-                                                <div class="shopping-option">
-                                                    <input type="checkbox" name="local-pickup" id="local-pickup">
-                                                    <label for="local-pickup">Chronopost</label>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                    <ul class="total">
-                                        <li>Total <span class="count">49.70€</span></li>
-                                    </ul>
-                                </div>
-                                <div class="payment-box">
-                                    <div class="upper-box">
-                                        <div class="payment-options">
-                                            <ul>
-
-                                                <li>
-                                                    <div class="radio-option">
-                                                        <input type="radio" name="payment-group" id="payment-2">
-                                                        <label for="payment-2">Carte bleue</label>
-                                                    </div>
-                                                </li>
-                                                <li>
-                                                    <div class="radio-option paypal">
-                                                        <input type="radio" name="payment-group" id="payment-3">
-                                                        <label for="payment-3">PayPal<span class="image"><img src="../assets/images/paypal.png" alt=""></span></label>
-                                                    </div>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                    <div class="text-right"><a href="#" class="btn-solid btn">Valider la commande</a></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
+  <div class="container">
+    <div class="checkout-page">
+      <div class="checkout-form">
+        <form>
+          <div class="row">
+            <div class="col-lg-6 col-sm-12 col-xs-12">
+              <div class="checkout-title">
+                <h3>Adresse de livraison</h3>
+              </div>
+              <div class="row check-out">
+                <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                  <div class="field-label">Nom</div>
+                  <input type="text" name="field-name" value="" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                  <div class="field-label">Prénom</div>
+                  <input type="text" name="field-name" value="" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                  <div class="field-label">Téléphone</div>
+                  <input type="text" name="field-name" value="" placeholder="">
+                </div>
+                <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                  <div class="field-label">Adresse email</div>
+                  <input type="text" name="field-name" value="" placeholder="">
+                </div>
+                <div class="form-group col-md-12 col-sm-12 col-xs-12">
+                  <div class="field-label">Adresse</div>
+                  <input type="text" name="field-name" value="" placeholder="">
+                </div>
+                <div class="form-group col-md-12 col-sm-12 col-xs-12">
+                  <div class="field-label">Ville</div>
+                  <input type="text" name="field-name" value="" placeholder="">
+                </div>
+                <div class="form-group col-md-12 col-sm-6 col-xs-12">
+                  <div class="field-label">Code postal</div>
+                  <input type="text" name="field-name" value="" placeholder="">
+                </div>
+                <div class="text-right"><a routerLink="/user-modifier" routerLinkActive="active" class="btn-solid btn">Modifier mes informations</a></div>
+              </div>
             </div>
-        </div>
+            <div class="col-lg-6 col-sm-12 col-xs-12">
+              <div class="checkout-details">
+                <div class="order-box">
+                  <div class="title-box">
+                    <div>Produit <span>Total</span></div>
+                  </div>
+                  <ul class="qty">
+                    <li>Thé blanc × 1 <span>10,20€</span></li>
+                    <li>Café arabica × 2 <span>36,80€</span></li>
+                  </ul>
+                  <ul class="sub-total">
+                    <li>Sous-total <span class="count">47,00€</span></li>
+                    <li>Livraison
+                      <div class="shipping">
+                        <div class="shopping-option">
+                          <input type="checkbox" name="free-shipping" id="free-shipping" checked>
+                          <label for="free-shipping">Colissimo - 2,70€</label>
+                          <small> Livraison en 3-5 jours </small>
+                        </div>
+                        <div class="shopping-option">
+                          <input type="checkbox" name="local-pickup" id="local-pickup">
+                          <label for="local-pickup">Chronopost - 3,50€</label>
+                          <small> Livraison en 48h </small>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                  <ul class="total">
+                    <li>Total <span class="count">49.70€</span></li>
+                  </ul>
+                </div>
+                <div class="payment-box">
+                  <div class="upper-box">
+                    <div class="payment-options">
+                      <ul>
+
+                        <li>
+                          <div class="radio-option">
+                            <input type="radio" name="payment-group" id="payment-2">
+                            <label for="payment-2">Carte bleue</label>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="radio-option paypal">
+                            <input type="radio" name="payment-group" id="payment-3" checked>
+                            <label for="payment-3">PayPal<span class="image"><img src="../assets/images/paypal.png"
+                                  alt=""></span></label>
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="text-right"><a href="#" class="btn-solid btn">Valider la commande</a></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
     </div>
+  </div>
 </section>
 <!-- section end -->
 <app-footer></app-footer>
 
 <!-- tap to top start -->
 <div class="tap-top">
-    <div><i class="fa fa-angle-double-up"></i></div>
+  <div><i class="fa fa-angle-double-up"></i></div>
 </div>
 <!-- tap to top end -->
 
@@ -141,11 +141,11 @@
 <script src="../assets/js/script.js"></script>
 
 <script>
-    function openSearch() {
-        document.getElementById("search-overlay").style.display = "block";
-    }
+  function openSearch() {
+    document.getElementById("search-overlay").style.display = "block";
+  }
 
-    function closeSearch() {
-        document.getElementById("search-overlay").style.display = "none";
-    }
+  function closeSearch() {
+    document.getElementById("search-overlay").style.display = "none";
+  }
 </script>
