--- a/src/app/product-tea/product-tea.component.html
+++ b/src/app/product-tea/product-tea.component.html
@@ -66,7 +66,7 @@
                                      <a href="product-page(no-sidebar).html"><h6>Thé Blanc</h6></a>
 
                                                           <h4>A partir de 10,20€</h4>
-                                                          <br><input type="button" value="Ajouter au panier">
+                                                          <br><input class="addToCart" type="button" value="Ajouter au panier">
                                                       </div>
                                                   </div>
                                               </div>
@@ -88,7 +88,7 @@
                                    <a href="product-page(no-sidebar).html"><h6>Thé Blanc Exotique</h6></a>
 
                                                         <h4>A partir de 15,90€</h4>
-                                                        <br><input type="button" value="Ajouter au panier">
+                                                        <br><input class="addToCart" type="button" value="Ajouter au panier">
                                                     </div>
                                                 </div>
                                             </div>
@@ -110,7 +110,7 @@
                                  <a href="product-page(no-sidebar).html"><h6>Thé Noir Agrumes et Mûres</h6></a>
 
                                                       <h4>A partir de 9,50€</h4>
-                                                      <br><input type="button" value="Ajouter au panier">
+                                                      <br><input class="addToCart" type="button" value="Ajouter au panier">
                                                   </div>
                                               </div>
                                           </div>
@@ -132,7 +132,7 @@
                                <a href="product-page(no-sidebar).html"><h6>Thé Noir Caramel</h6></a>
 
                                                     <h4>A partir de 11,80€</h4>
-                                                    <br><input type="button" value="Ajouter au panier">
+                                                    <br><input class="addToCart" type="button" value="Ajouter au panier">
                                                 </div>
                                             </div>
                                         </div>
@@ -154,7 +154,7 @@
                              <a href="product-page(no-sidebar).html"><h6>Thé Noir Chaï Epicé</h6></a>
 
                                                   <h4>A partir de 16,80€</h4>
-                                                  <br><input type="button" value="Ajouter au panier">
+                                                  <br><input class="addToCart" type="button" value="Ajouter au panier">
                                               </div>
                                           </div>
                                       </div>
@@ -176,7 +176,7 @@
                                <a href="product-page(no-sidebar).html"><h6>Thé Vert Amande</h6></a>
 
                                                     <h4>A partir de 10,10€</h4>
-                                                    <br><input type="button" value="Ajouter au panier">
+                                                    <br><input class="addToCart" type="button" value="Ajouter au panier">
                                                 </div>
                                             </div>
                                         </div>
@@ -198,7 +198,7 @@
                              <a href="product-page(no-sidebar).html"><h6>Thé Vert Rose</h6></a>
 
                                                   <h4>A partir de 12,50€</h4>
-                                                  <br><input type="button" value="Ajouter au panier">
+                                                  <br><input class="addToCart" type="button" value="Ajouter au panier">
                                               </div>
                                           </div>
                                       </div>
@@ -220,7 +220,7 @@
                            <a href="product-page(no-sidebar).html"><h6>Rooibos jasmin</h6></a>
 
                                                 <h4>A partir de 5,40€</h4>
-                                                <br><input type="button" value="Ajouter au panier">
+                                                <br><input class="addToCart" type="button" value="Ajouter au panier">
                                             </div>
                                         </div>
                                     </div>
@@ -242,7 +242,7 @@
                          <a href="product-page(no-sidebar).html"><h6>Rooibos vanille</h6></a>
 
                                               <h4>A partir de 9,90€</h4>
-                                              <br><input type="button" value="Ajouter au panier">
+                                              <br><input class="addToCart" type="button" value="Ajouter au panier">
                                           </div>
                                       </div>
                                   </div>
