--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -26,7 +26,7 @@
                           <div class="col-md-6">
                               <label for="review">Mot de passe</label>
                               <input type="password" class="form-control" id="review" placeholder="Entrez votre mot de passe" required="">
-                          </div><a href="#" class="btn btn-solid">Valider</a></div>
+                          </div><a routerLink="/user-dashboard" routerLinkActive="active" class="btn btn-solid">Valider</a></div>
                   </form>
               </div>
           </div>
