--- a/src/app/user-dashboard/user-dashboard.component.html
+++ b/src/app/user-dashboard/user-dashboard.component.html
@@ -1,72 +1,3 @@
-​      <app-navbar></app-navbar>
-<div class="page-wrapper">
-    <div class="page-body-wrapper">
-      <!-- Page Sidebar Start-->
-      <div class="page-sidebar">
-        <app-user-navbar></app-user-navbar>
-      </div>
-
-      <!--Navbar user-->
-
-      <div class="page-body">
-
-        ​
-        <!-- section start -->
-        <section class="section-b-space">
-          <div class="container">
-            <div class="col-lg-9">
-              <div class="dashboard-right">
-                <div class="dashboard">
-                  <div class="page-title">
-                    <h2>Tableau de bord</h2>
-                  </div>
-                  <div class="welcome-msg">
-                    <p>Bonjour, MARK JECNO !</p>
-                    <p>Depuis votre tableau de bord vous pouvez visualiser vos activités récentes ainsi que modifier les
-                      informations de votre profil.</p>
-                  </div>
-                  <div class="box-account box-info">
-                    <div class="box-head">
-                      <h2>Information du compte</h2>
-                    </div>
-                    <div class="row">
-                      <div class="col-sm-6">
-                        <div class="box">
-                          <div class="box-title">
-                            <h3>Contact </h3><a routerLink='/user-modifier' routerLinkActive="active">Modifier</a>
-                          </div>
-                          <div class="box-content">
-                            <h6>MARK JECNO</h6>
-                            <h6>3615 rue du projet prise de tete, 34080 Diginamic</h6>
-                            ​
-                          </div>
-                        </div>
-                      </div>
-                      <div class="col-sm-6">
-                        <div class="box">
-                          <div class="box-title">
-                            <h3>Newsletters</h3><a href="#">Modifier</a>
-                          </div>
-                          <div class="box-content">
-                            <p>Vous n'êtes pas abonné à notre newsletter.</p>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div>
-                      <div class="box">
-                        <div class="box-title">
-                          <h3>Information fidélité</h3>
-                        </div>
-                        <div class="row">
-                          <div class="col-sm-6">
-                            <h6>Numéro client</h6>
-                            <address>RJ45376<br></address>
-                          </div>
-                          <div class="col-sm-6">
-                            <h6>Nombre de points fidélité</h6>
-                            <address>165<br></address>
-                          </div>
 ​
 <div class="page-wrapper">
   <div class="page-body-wrapper">
@@ -82,15 +13,17 @@
       ​
       <!-- section start -->
       <section class="section-b-space">
+          <div class="page-title">
+              <h3>Tableau de bord</h3>
+            </div>
         <div class="container">
           <div class="col-lg-9">
             <div class="dashboard-right">
               <div class="dashboard">
-                <div class="page-title">
-                  <h2>Tableau de bord</h2>
-                </div>
+
                 <div class="welcome-msg">
-                  <p>Bonjour, MARK JECNO !</p>
+                  <h5>Bonjour, Jean Neymar !</h5>
+                  <br>
                   <p>Depuis votre tableau de bord vous pouvez visualiser vos activités récentes ainsi que modifier les
                     informations de votre profil.</p>
                 </div>
@@ -106,8 +39,8 @@
                             routerLinkActive="active">Modifier</a>
                         </div>
                         <div class="box-content">
-                          <h6>MARK JECNO</h6>
-                          <h6>3615 rue du projet prise de tete, 34080 Diginamic</h6>
+                          <h6>Jean Neymar</h6>
+                          <h6>3615 rue du projet Atos, 34080 Diginamic</h6>
                           ​
                         </div>
                       </div>
@@ -116,7 +49,7 @@
                       <div class="box">
                         <div class="box-title">
                           <h3>Dernieres commandes</h3><a class="modifier" routerLink='/user-historique'
-                            routerLinkActive="active">Modifier</a>
+                            routerLinkActive="active">Historique</a>
                         </div>
                         <div class="box-content">
                           <p>Pas de commandes ces 3 derniers mois.</p>
@@ -132,7 +65,7 @@
                       <div class="row">
                         <div class="col-sm-6">
                           <h6>Numéro client</h6>
-                          <address>RJ45376<br></address>
+                          <address>5261898<br></address>
                         </div>
                         <div class="col-sm-6">
                           <h6>Nombre de points fidélité</h6>
