--- a/src/app/add-to-cart-modal/add-to-cart-modal.component.html
+++ b/src/app/add-to-cart-modal/add-to-cart-modal.component.html
@@ -19,20 +19,20 @@
                                       <a href="#">
                                           <h6>
                                               <i class="fa fa-check"></i>Item
-                                              <span>men full sleeves</span>
+
                                               <span> successfully added to your Cart</span>
                                           </h6>
                                       </a>
                                       <div class="buttons">
-                                          <a href="#" class="view-cart btn btn-solid">Votre panier</a>
-                                          <a href="#" class="checkout btn btn-solid">Validez la commande</a>
+                                          <a routerLink='/cart' routerLinkActive="active" class="view-cart btn btn-solid">Votre panier</a>
+
                                           <a href="#" class="continue btn btn-solid">Continuez votre shopping</a>
                                       </div>
                                       <div class="upsell_payment">
                                           <img src="../assets/images/payment_cart.png" class="img-fluid blur-up lazyload" alt="">
                                       </div>
                                   </div>
-                              </div>                              
+                              </div>
                           </div>
                       </div>
                   </div>
