--- a/src/app/product-page/product-page.component.html
+++ b/src/app/product-page/product-page.component.html
@@ -31,9 +31,9 @@
                           </div>
                           <div class="size-box">
                               <ul>
-                                  <li class="active"><a href="#">100 grs</a></li>
-                                  <li><a href="#">200 grs</a></li>
-                                  <li><a href="#">500 grs</a></li>
+                                  <li class="active"><a >100 grs</a></li>
+                                  <li><a >200 grs</a></li>
+                                  <li><a >500 grs</a></li>
                               </ul>
                           </div>
                           <h6 class="product-title">Quantité</h6>
@@ -42,7 +42,7 @@
                                   <input type="text" name="quantity" class="form-control input-number" value="1"> <span class="input-group-prepend"><button type="button" class="btn quantity-right-plus" data-type="plus" data-field=""><i class="ti-angle-right"></i></button></span></div>
                           </div>
                       </div>
-                      <div class="product-buttons"><a href="#" data-toggle="modal" data-target="#addtocart" class="btn btn-solid">Ajouter au panier</a></div>
+                      <div class="product-buttons"><a  data-toggle="modal" data-target="#addtocart" class="btn btn-solid">Ajouter au panier</a></div>
                       <div class="border-product">
                           <h6 class="product-title">Détails du produit</h6>
                           <p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo. Nemo enim ipsam voluptatem,</p>
