--- a/src/app/user-modifier/user-modifier.component.html
+++ b/src/app/user-modifier/user-modifier.component.html
@@ -60,7 +60,7 @@
                 <div class="form-row">
                   <div class="col-md-12">
                     <label for="address">Adresse</label>
-                    <input type="text" class="form-control" id="address-two" placeholder="" required="">
+                    <input type="text" class="form-control" id="address-one" placeholder="" required="">
                     <input type="text" class="form-control" id="address-two" placeholder="" required="">
                   </div>
                   <div class="col-md-6">
@@ -86,10 +86,7 @@
 
     </div>
   </div>
-<<<<<<< HEAD
-=======
   <app-footer></app-footer>
->>>>>>> 30a7478a81d1d29fe2604d9a02f47328360bdc8a
 
   <!-- tap to top -->
   <div class="tap-top">
