--- a/src/assets/css/admin.css
+++ b/src/assets/css/admin.css
@@ -280,7 +280,7 @@ button {
 .btn-solid:hover {
   background-position: 100%;
   color: #000;
-  background-color: #fff;
+  background-color: #d0e1c7;
 }
 .btn-solid.black-btn {
   background-image: linear-gradient(30deg, #222 50%, transparent 50%);
