--- a/src/app/admin-index/admin-index.component.html
+++ b/src/app/admin-index/admin-index.component.html
@@ -59,15 +59,9 @@
               <div class="card-body">
                 <div class="media">
                   <div class="media-body">
-                    <span>Ventes du Mois Dernier</span>
                     <h2 class="mb-0">9054</h2>
                     <p>
                       0.25% <span><i class="fa fa-angle-up"></i></span>
-                    </p>
-                    <h5 class="f-w-600">Ventes brutes du mois dernier</h5>
-                    <p>
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting
                     </p>
                   </div>
                   <div class="bg-primary b-r-8">
@@ -107,15 +101,9 @@
               <div class="card-body">
                 <div class="media">
                   <div class="media-body">
-                    <span>Achats Mensuels</span>
                     <h2 class="mb-0">2154</h2>
                     <p>
                       0.13% <span><i class="fa fa-angle-up"></i></span>
-                    </p>
-                    <h5 class="f-w-600">Achats bruts</h5>
-                    <p>
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting
                     </p>
                   </div>
                   <div class="bg-secondary b-r-8">
@@ -141,27 +129,22 @@
                     </div>
                   </div>
                   <div class="col-6">
-                    <div class="value-graph">
-                      <h3>
-                        28%
-                        <span><i class="fa fa-angle-up font-warning"></i></span>
-                      </h3>
-                    </div>
+                      <div class="value-graph">
+                          <h3>
+                            28%
+                            <span><i class="fa fa-angle-up font-danger"></i></span>
+                          </h3>
+                        </div>
                   </div>
                 </div>
               </div>
               <div class="card-body">
                 <div class="media">
                   <div class="media-body">
-                    <span>Transactions</span>
+
                     <h2 class="mb-0">4672</h2>
                     <p>
                       0.8% <span><i class="fa fa-angle-up"></i></span>
-                    </p>
-                    <h5 class="f-w-600">Details des transactions</h5>
-                    <p>
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting
                     </p>
                   </div>
                   <div class="bg-warning b-r-8">
@@ -199,12 +182,10 @@
               <div class="card-body">
                 <div class="media">
                   <div class="media-body">
-                    <span>Ventes de la journée</span>
                     <h2 class="mb-0">0782</h2>
                     <p>
                       0.25% <span><i class="fa fa-angle-up"></i></span>
                     </p>
-                    <h5 class="f-w-600">Ventes brutes d'aujourd'hui</h5>
                   </div>
                   <div class="bg-danger b-r-8">
                     <div class="small-box">
