--- a/src/app/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin-sidebar/admin-sidebar.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="sidebar custom-scrollbar">
   <div class="sidebar-user text-center">
-    <div><img class="img-60 rounded-circle lazyloaded blur-up" src="../assets/images/dashboard/man.jpg" alt="#"></div>
+    <div><img class="img-60 rounded-circle lazyloaded blur-up" src="http://tof.cx/images/2019/10/18/b2794ad7ec51887456ffec089d1de94b.jpg" alt="#"></div>
             <h6 class="mt-3 f-14">John Doe</h6>
             <p>Administrateur</p>
   </div>
