--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -21,7 +21,7 @@
                                   </a></nav>
                               </li>
                               <li><nav>
-                                  <a *ngIf="loginService.isUserLoggedIn()" routerLink="/logout" class="nav-link" data-lng="es">
+                                  <a routerLink="/logout" class="nav-link" data-lng="es">
                                       Déconnection
                                   </a></nav>
                               </li>
