--- a/src/app/admin-pdt-confirmation/admin-pdt-confirmation.component.html
+++ b/src/app/admin-pdt-confirmation/admin-pdt-confirmation.component.html
@@ -1,1 +1,207 @@
-<p>admin-pdt-confirmation works!</p>
+<!-- page-wrapper Start-->
+<div class="page-wrapper">
+
+    <!-- Page Header Start-->
+    <app-admin-header></app-admin-header>
+    <!-- Page Header Ends -->
+
+    <!-- Page Body Start-->
+    <div class="page-body-wrapper">
+
+        <!-- Page Sidebar Start-->
+        <div class="page-sidebar">
+          <app-admin-sidebar></app-admin-sidebar>
+        </div>
+        <!-- Page Sidebar Ends-->
+
+        <!-- Right sidebar Start-->
+
+        <!-- Right sidebar Ends-->
+
+        <div class="page-body">
+
+            <!-- Container-fluid starts-->
+            <div class="container-fluid">
+                <div class="page-header">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="page-header-left">
+                                <h3>Ajouter un Produit
+                                    <small>Thé & Café Dashboard admin</small>
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Container-fluid Ends-->
+
+            <!-- Container-fluid starts-->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="card">
+                            <div class="card-header">
+                                <h5>Créer un produit</h5>
+                            </div>
+                            <div class="card-body">
+                                <div class="row product-adding">
+                                    <div class="col-xl-5">
+                                        <div class="add-product">
+                                            <div class="row">
+                                                <div class="col-xl-9 xl-50 col-sm-6 col-9">
+                                                    <img src="../assets/images/pro3/1.jpg" alt="" class="img-fluid image_zoom_1 blur-up lazyloaded">
+                                                </div>
+                                                <div class="col-xl-3 xl-50 col-sm-6 col-3">
+                                                    <ul class="file-upload-product">
+                                                        <li><div class="box-input-file"><input class="upload" type="file"><i class="fa fa-plus"></i></div></li>
+                                                        <li><div class="box-input-file"><input class="upload" type="file"><i class="fa fa-plus"></i></div></li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xl-7">
+                                        <form class="needs-validation add-product-form" novalidate="">
+                                            <div class="form">
+                                                <div class="form-group mb-3 row">
+                                                    <label for="validationCustom01" class="col-xl-3 col-sm-4 mb-0">Nom :</label>
+                                                    <input class="form-control col-xl-8 col-sm-7" id="validationCustom01" type="text" required="">
+                                                    <div class="valid-feedback">Looks good!</div>
+                                                </div>
+                                                <div class="form-group mb-3 row">
+                                                    <label for="validationCustom02" class="col-xl-3 col-sm-4 mb-0">Prix :</label>
+                                                    <input class="form-control col-xl-8 col-sm-7" id="validationCustom02" type="text" required="">
+                                                    <div class="valid-feedback">Looks good!</div>
+                                                </div>
+                                                <div class="form-group mb-3 row">
+                                                    <label for="validationCustom03" class="col-xl-3 col-sm-4 mb-0">Remise :</label>
+                                                    <input class="form-control col-xl-8 col-sm-7" id="validationCustom03" type="number" required="">
+                                                    <div class="valid-feedback">Looks good!</div>
+                                                </div>
+                                                <div class="form-group mb-3 row">
+                                                    <label for="validationCustomUsername" class="col-xl-3 col-sm-4 mb-0">Référence produit :</label>
+                                                    <input class="form-control col-xl-8 col-sm-7" id="validationCustomUsername" type="text" required="">
+                                                    <div class="invalid-feedback offset-sm-4 offset-xl-3">Please choose Valid Code.</div>
+                                                </div>
+                                            </div>
+                                            <div class="form">
+                                                <div class="form-group row">
+                                                    <label for="exampleFormControlSelect1" class="col-xl-3 col-sm-4 mb-0">Type Produit :</label>
+                                                    <select class="form-control digits col-xl-8 col-sm-7" id="exampleFormControlSelect1">
+                                                        <option>Cafés Arabica</option>
+                                                        <option>Cafés Robusta</option>
+                                                        <option>Blend</option>
+                                                        <option>Thés Blanc</option>
+                                                        <option>Thés Noir</option>
+                                                        <option>Thés Rooibos</option>
+                                                        <option>Thés Vert</option>
+                                                    </select>
+                                                </div>
+                                              </div>
+                                            <div class="form">
+                                                <div class="form-group row">
+                                                    <label for="exampleFormControlSelect1" class="col-xl-3 col-sm-4 mb-0">Origine Produit :</label>
+                                                    <select class="form-control digits col-xl-8 col-sm-7" id="exampleFormControlSelect1">
+                                                        <option>Argentine</option>
+                                                        <option>Afrique du Sud</option>
+                                                        <option>Bresil</option>
+                                                        <option>China</option>
+                                                        <option>Colombie</option>
+                                                        <option>Ethiopie</option>
+                                                        <option>Inde</option>
+                                                        <option>Indonesie</option>
+                                                        <option>Japon</option>
+                                                        <option>Kenya</option>
+                                                        <option>Réunion</option>
+                                                        <option>Vietnam</option>
+                                                        <option>Yemen</option>
+                                                    </select>
+                                                </div>
+                                              </div>
+                                            <div class="form">
+                                                <div class="form-group row">
+                                                    <label for="exampleFormControlSelect1" class="col-xl-3 col-sm-4 mb-0">Taille Produit :</label>
+                                                    <select class="form-control digits col-xl-8 col-sm-7" id="exampleFormControlSelect1">
+                                                        <option>100 grammes</option>
+                                                        <option>200 grammes</option>
+                                                        <option>500 grammes</option>
+                                                    </select>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label class="col-xl-3 col-sm-4 mb-0">Stock Produit :</label>
+
+                                                    <input class="form-control col-xl-8 col-sm-7" id="validationCustomUsername" type="text" required="">
+                                                    <div class="invalid-feedback offset-sm-4 offset-xl-3">Please choose Valid Code.</div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label class="col-xl-3 col-sm-4 mb-0">Description :</label>
+                                                    <div class="col-xl-8 col-sm-7 pl-0 description-sm">
+                                                        <textarea id="editor1" name="editor1" cols="64" rows="4"></textarea>
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="offset-xl-3 offset-sm-4">
+                                                <button type="submit" class="btn btn-primary" routerLink='/admin-pdt-confirmation' routerLinkActive="active">AJOUTER</button>
+                                                <button type="button" class="btn btn-light"routerLink='/admin-index' routerLinkActive="active" style="margin-top: 26%";>ANNULER</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Container-fluid Ends-->
+
+        </div>
+    </div>
+
+</div>
+
+<!-- latest jquery-->
+<script src="../assets/js/jquery-3.3.1.min.js"></script>
+
+<!-- Bootstrap js-->
+<script src="../assets/js/popper.min.js"></script>
+<script src="../assets/js/bootstrap.js"></script>
+
+<!-- feather icon js-->
+<script src="../assets/js/icons/feather-icon/feather.min.js"></script>
+<script src="../assets/js/icons/feather-icon/feather-icon.js"></script>
+
+<!-- Sidebar jquery-->
+<script src="../assets/js/sidebar-menu.js"></script>
+
+<!-- touchspin js-->
+<script src="../assets/js/touchspin/vendors.min.js"></script>
+<script src="../assets/js/touchspin/touchspin.js"></script>
+<script src="../assets/js/touchspin/input-groups.min.js"></script>
+
+<!-- form validation js-->
+<script src="../assets/js/dashboard/form-validation-custom.js"></script>
+
+<!-- ckeditor js-->
+<script src="../assets/js/editor/ckeditor/ckeditor.js"></script>
+<script src="../assets/js/editor/ckeditor/styles.js"></script>
+<script src="../assets/js/editor/ckeditor/adapters/jquery.js"></script>
+<script src="../assets/js/editor/ckeditor/ckeditor.custom.js"></script>
+
+<!-- Zoom js-->
+<script src="../assets/js/jquery.elevatezoom.js"></script>
+<script src="../assets/js/zoom-scripts.js"></script>
+
+<!--Customizer admin-->
+<script src="../assets/js/admin-customizer.js"></script>
+
+<!-- lazyload js-->
+<script src="../assets/js/lazysizes.min.js"></script>
+
+<!--right sidebar js-->
+<script src="../assets/js/chat-menu.js"></script>
+
+<!--script admin-->
+<script src="../assets/js/admin-script.js"></script>
+
